--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .feather {
     width: 24px;
     height: 24px;
@@ -41,7 +43,7 @@
 }
 
 .sidebar .nav-link.active {
-  color: #007bff;
+  color: $primary;
 }
 
 .sidebar .nav-link:hover .feather,
