--- a/src/components/tableview/table/data/styles.scss
+++ b/src/components/tableview/table/data/styles.scss
@@ -14,47 +14,6 @@
     }
 }
 
-.data-grid-footer {
-    width: 100%;
-    padding: 5px;
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: $secondary;
-
-    & > .info {
-        display: flex;
-        align-items: flex-end;
-        padding-left: 5px;
-        color: $fontColor;
-        
-        & > .selectedCount {
-            margin-left: 10px;
-        }
-    }
-
-    & .MuiPagination-ul {
-        & li {
-            outline: none !important;
-            &:focus {
-                outline: none !important;
-                border: none;
-            }
-        }
-
-        & .Mui-selected {
-            background-color: $primary;
-            color: white;
-        }
-
-        & .MuiPaginationItem-root {
-            &:hover {
-                background-color: rgba($secondary, 0.4);
-            }
-        }
-    }
-}
-
 .MuiDataGrid-root {
     display: flex;
     height: 100% !important;
@@ -71,6 +30,12 @@
         & > .MuiDataGrid-window {
             display: block !important;
         }
+
+        & > .data-grid-overlay {
+            display: block !important;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     ::-webkit-scrollbar {
@@ -86,4 +51,8 @@
     ::-webkit-scrollbar-thumb:hover {
         background: $primary;
     }
+}
+
+.MuiDataGrid-window {
+    padding-bottom: 10px;
 }
