--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,6 +4,9 @@ $disabled: darkgray;
 $fontColor: #936B52;
 $border: #CF6679;
 $disabledColor: rgba(0, 0, 0, 0.26);
+$error: #c20024;
+$errorLight: rgba(#c05c6e, 0.3);
+
 
 $fontSize: 0.875rem;
 
