add create wizard config

--- a/src/components/forms/inputs/textField/styles.scss
+++ b/src/components/forms/inputs/textField/styles.scss
@@ -15,6 +15,17 @@
     }
 }
 
+.searchTextField-error {
+    & > fieldset {
+        color: red !important;
+        border-color: red !important;
+    }
+
+    #searchTextField-label {
+        color: $primary !important;
+    }
+}
+
 .MuiTextField-root {
     width: 100%;
 }
