add configuration for StudyPlan

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,6 +7,8 @@ $disabledColor: rgba(0, 0, 0, 0.26);
 $error: #c20024;
 $errorLight: rgba(#c05c6e, 0.3);
 
+$active: #39ce6b;
+$inactive: #CF6679;
 
 $fontSize: 0.875rem;
 
