changed color schema

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,4 @@
-$primary: #B00020;
+$primary: #0300b0;
 $secondary: #FBF4EF;
 $disabled: darkgray;
 $fontColor: #936B52;
@@ -6,6 +6,8 @@ $border: #CF6679;
 $disabledColor: rgba(0, 0, 0, 0.26);
 $error: #c20024;
 $errorLight: rgba(#c05c6e, 0.3);
+
+$previousPrimary: #B00020;
 
 $active: #39ce6b;
 $inactive: #CF6679;
